--- a/ChildWindow/SettingWindow.ui
+++ b/ChildWindow/SettingWindow.ui
@@ -13,7 +13,6 @@
   <property name="font">
    <font>
     <family>Fira Code</family>
-    <weight>50</weight>
     <bold>false</bold>
    </font>
   </property>
@@ -29,7 +28,7 @@
      <x>10</x>
      <y>10</y>
      <width>381</width>
-     <height>241</height>
+     <height>291</height>
     </rect>
    </property>
    <property name="title">
@@ -96,7 +95,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_4">
+      <widget class="QPushButton" name="BtnCheckUpdate">
        <property name="text">
         <string>CHECK UPDATE</string>
        </property>
@@ -122,7 +121,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_5">
+      <widget class="QPushButton" name="BtnOpenConfigFile">
        <property name="text">
         <string>Config.ini</string>
        </property>
@@ -130,39 +129,6 @@
      </item>
     </layout>
    </widget>
-  </widget>
-  <widget class="QWidget" name="layoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>260</y>
-     <width>239</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QPushButton" name="pushButton_3">
-      <property name="text">
-       <string>Reset</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QPushButton" name="pushButton_2">
-      <property name="text">
-       <string>Cancel</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="2">
-     <widget class="QPushButton" name="pushButton">
-      <property name="text">
-       <string>Save</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
   </widget>
  </widget>
  <resources/>
