--- a/icons/APPicons.qrc
+++ b/icons/APPicons.qrc
@@ -4,5 +4,6 @@
         <file>icon_Exit.png</file>
         <file>icon_HOW.png</file>
         <file>icon_Setting.png</file>
+        <file>app_logo.ico</file>
     </qresource>
 </RCC>
