--- a/icons/APPicons.qrc
+++ b/icons/APPicons.qrc
@@ -5,5 +5,6 @@
         <file>icon_HOW.png</file>
         <file>icon_Setting.png</file>
         <file>app_logo.ico</file>
+        <file>app_logo_1024pxPNG.png</file>
     </qresource>
 </RCC>
