--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>789</width>
+    <width>791</width>
     <height>600</height>
    </rect>
   </property>
@@ -41,7 +41,7 @@
      <string notr="true"/>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="HomePage">
      <widget class="QWidget" name="layoutWidget">
@@ -178,9 +178,9 @@ border:0px;</string>
       <widget class="QTextBrowser" name="TBrwSyncDebug">
        <property name="geometry">
         <rect>
-         <x>20</x>
+         <x>10</x>
          <y>20</y>
-         <width>351</width>
+         <width>361</width>
          <height>431</height>
         </rect>
        </property>
@@ -188,27 +188,6 @@ border:0px;</string>
         <cursorShape>ArrowCursor</cursorShape>
        </property>
       </widget>
-     </widget>
-     <widget class="QProgressBar" name="PBarCommon">
-      <property name="geometry">
-       <rect>
-        <x>-10</x>
-        <y>530</y>
-        <width>791</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>Fira Code</family>
-       </font>
-      </property>
-      <property name="value">
-       <number>50</number>
-      </property>
-      <property name="textVisible">
-       <bool>false</bool>
-      </property>
      </widget>
      <widget class="QGroupBox" name="ConfigGBox">
       <property name="geometry">
@@ -393,7 +372,6 @@ p, li { white-space: pre-wrap; }
      <zorder>ConfigGBox</zorder>
      <zorder>Quick</zorder>
      <zorder>Debug</zorder>
-     <zorder>PBarCommon</zorder>
      <zorder>PageLOGO_2</zorder>
     </widget>
     <widget class="QWidget" name="BasePage">
@@ -591,6 +569,9 @@ p, li { white-space: pre-wrap; }
           <height>41</height>
          </rect>
         </property>
+        <property name="tabChangesFocus">
+         <bool>false</bool>
+        </property>
         <property name="html">
          <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
@@ -598,29 +579,11 @@ p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'SimSun'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Fira Code'; color:#161616;&quot;&gt;NO PATH CHOOSE..&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
+        <property name="placeholderText">
+         <string/>
+        </property>
        </widget>
       </widget>
-     </widget>
-     <widget class="QProgressBar" name="PBarCommon_4">
-      <property name="geometry">
-       <rect>
-        <x>-10</x>
-        <y>530</y>
-        <width>791</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>Fira Code</family>
-       </font>
-      </property>
-      <property name="value">
-       <number>50</number>
-      </property>
-      <property name="textVisible">
-       <bool>false</bool>
-      </property>
      </widget>
      <widget class="QGroupBox" name="Debug_2">
       <property name="geometry">
@@ -666,13 +629,37 @@ p, li { white-space: pre-wrap; }
      </widget>
     </widget>
    </widget>
+   <widget class="QProgressBar" name="PBarCommon_4">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>550</y>
+      <width>801</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Fira Code</family>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(79, 190, 159);</string>
+    </property>
+    <property name="value">
+     <number>100</number>
+    </property>
+    <property name="textVisible">
+     <bool>false</bool>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>789</width>
+     <width>791</width>
      <height>22</height>
     </rect>
    </property>
