增加设备交互连接计划面板（后期计划集成实现拖拽文件传输交互，连线交互，多设备等功能）

--- a/icons/APPicons.qrc
+++ b/icons/APPicons.qrc
@@ -6,5 +6,8 @@
         <file>icon_Setting.png</file>
         <file>app_logo.ico</file>
         <file>app_logo_1024pxPNG.png</file>
+        <file>S.png</file>
+        <file>C.png</file>
+
     </qresource>
 </RCC>
